examples-generated/cluster/compute/v1beta1/vpngateway.yaml

apiVersion: compute.gcp.upbound.io/v1beta1
kind: Route
metadata:
  annotations:
    meta.upbound.io/example-id: compute/v1beta1/vpngateway
  labels:
    testing.upbound.io/example-name: route1
  name: route1
spec:
  forProvider:
    destRange: 15.0.0.0/24
    networkSelector:
      matchLabels:
        testing.upbound.io/example-name: network1
    nextHopVpnTunnelSelector:
      matchLabels:
        testing.upbound.io/example-name: tunnel1
    priority: 1000
